--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\16475\AppData\Local\Temp\testng-eclipse--131990036\testng-customsuite.xml</span>
+                    <span>C:\Users\16475\AppData\Local\Temp\testng-eclipse-859364557\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,7 +104,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.Shanthi.learningSelenium.RegisterAccount" class="method navigator-link" hash-for-method="verifyLoginTest">verifyLoginTest</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.Shanthi.learningSelenium.PhoneOrderCreation" class="method navigator-link" hash-for-method="verifyLoginDetails">verifyLoginDetails</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -122,14 +122,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.Shanthi.learningSelenium.RegisterAccount</span>
+              <span class="class-name">com.Shanthi.learningSelenium.PhoneOrderCreation</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="verifyLoginTest">
-                  </a> <!-- verifyLoginTest -->
-                  <span class="method-name">verifyLoginTest</span>
+                  <a name="verifyLoginDetails">
+                  </a> <!-- verifyLoginDetails -->
+                  <span class="method-name">verifyLoginDetails</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -137,7 +137,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\16475\AppData\Local\Temp\testng-eclipse--131990036\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\16475\AppData\Local\Temp\testng-eclipse-859364557\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -146,7 +146,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.Shanthi.learningSelenium.RegisterAccount&quot;/&gt;
+      &lt;class name=&quot;com.Shanthi.learningSelenium.PhoneOrderCreation&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -188,14 +188,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'verifyLoginTest')
-data.setCell(0, 2, 'com.Shanthi.learningSelenium.RegisterAccount')
-data.setCell(0, 3, 969);
+data.setCell(0, 1, 'verifyLoginDetails')
+data.setCell(0, 2, 'com.Shanthi.learningSelenium.PhoneOrderCreation')
+data.setCell(0, 3, 15136);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 969 ms</span>
+              <span class="suite-total-time">Total running time: 15 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -221,18 +221,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.Shanthi.learningSelenium.RegisterAccount</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.Shanthi.learningSelenium.PhoneOrderCreation</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">setUp</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">verifyLoginTest</span>
-                <span class="method-start">4337 ms</span>
+                <span class="method-name">verifyLoginDetails</span>
+                <span class="method-start">4763 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">5310 ms</span>
+                <span class="method-start">19903 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
