--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8c9f7e">  <td>22/12/10 17:39:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;RegisterAccount.setUp()[pri:0, instance:com.Shanthi.learningSelenium.RegisterAccount@4a7f959b]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@707157673</td>   <td></td> </tr>
-<tr bgcolor="8c9f7e">  <td>22/12/10 17:39:23</td>   <td>5309</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;RegisterAccount.tearDown()[pri:0, instance:com.Shanthi.learningSelenium.RegisterAccount@4a7f959b]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@707157673</td>   <td></td> </tr>
-<tr bgcolor="8c9f7e">  <td>22/12/10 17:39:22</td>   <td>4336</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegisterAccount.verifyLoginTest()[pri:0, instance:com.Shanthi.learningSelenium.RegisterAccount@4a7f959b]">verifyLoginTest</td> 
-  <td>main@707157673</td>   <td></td> </tr>
+<tr bgcolor="7277dc">  <td>22/12/14 19:34:54</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PhoneOrderCreation.setUp()[pri:0, instance:com.Shanthi.learningSelenium.PhoneOrderCreation@662b4c69]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@150138649</td>   <td></td> </tr>
+<tr bgcolor="7277dc">  <td>22/12/14 19:35:14</td>   <td>19902</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;PhoneOrderCreation.tearDown()[pri:0, instance:com.Shanthi.learningSelenium.PhoneOrderCreation@662b4c69]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@150138649</td>   <td></td> </tr>
+<tr bgcolor="7277dc">  <td>22/12/14 19:34:59</td>   <td>4762</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PhoneOrderCreation.verifyLoginDetails()[pri:0, instance:com.Shanthi.learningSelenium.PhoneOrderCreation@662b4c69]">verifyLoginDetails</td> 
+  <td>main@150138649</td>   <td></td> </tr>
 </table>
